# Context

./: .gitignore  Cargo.toml  README.md
context/: Cargo.toml
context/src/: lib.rs  prelude.rs
context/src/core/: axisemulator.rs  configs.rs  context.rs  guihandler.rs  mod.rs  soundhandler.rs  time.rs  vulkancore.rs
context/src/core/guishader/: gui.vert  rect.frag  rect.frag.spv  rect.vert.spv  single_color.frag  single_color.frag.spv  single_color.vert  single_color.vert.spv  text.frag  text.frag.spv
context/src/core/osspecific/: mod.rs  osspecific.rs
context/src/core/osspecific/linux/: gamemode.rs
context/src/gui/: clickable.rs  color.rs  colorable.rs  displayable.rs  executable.rs  frameable.rs  hoverable.rs  iconizable.rs  mod.rs  selectable.rs  textable.rs  texturedvertex.rs  topgui.rs  writeable.rs
context/src/utils/: mod.rs  render_target.rs  rendertarget.rs  single_submit.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  prelude.rs  presentationcore.rs  renderbackend.rs  traits.rs
presentation/src/input/: controller.rs  controlleraxis.rs  eventsystem.rs  guidirection.rs  inputmap.rs  mod.rs  mousebutton.rs
presentation/src/vri/: mod.rs  openvrintegration.rs  openvrrendercore.rs
presentation/src/wsi/: mod.rs  vulkanwindowrendercore.rs  windowsystemintegration.rs
presentation/src/xri/: mod.rs  openxrintegration.rs  openxrrendercore.rs
utilities/: Cargo.toml
utilities/src/: arc_unique_vec.rs  asyncthread.rs  closures.rs  coin.rs  confighandler.rs  errortype.rs  future.rs  hashvector.rs  helperfunctions.rs  lib.rs  macros.rs  prelude.rs  rc_unique_vec.rs
vulkan-rs/: Cargo.toml
vulkan-rs/src/: accelerationstructure.rs  buffer.rs  commandbuffer.rs  commandpool.rs  descriptorpool.rs  descriptorset.rs  descriptorsetlayout.rs  device.rs  fence.rs  ffi.rs  framebuffer.rs  googledisplaytiming.rs  image.rs  instance.rs  lib.rs  loader.rs  mappedmemory.rs  memory.rs  physicaldevice.rs  pipeline.rs  pipelinecache.rs  pipelinelayout.rs  prelude.rs  querypool.rs  queue.rs  renderpass.rs  sampler_manager.rs  semaphore.rs  shadermodule.rs  (+2 more)
vulkan-sys/: Cargo.toml
(+407 files in other folders)
