[package]
name = "context"
version = "0.1.0"
authors = ["hodasemi <superschneider@t-online.de>"]
edition = "2018"

[dependencies]
presentation = { path = "../presentation" }
ears = { version = "0.7.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.5.2"

[features]
audio = ["ears"]
openxr = ["presentation/OpenXR"]
openvr = ["presentation/OpenVR"]
