[package]
name = "presentation"
version = "0.1.0"
authors = ["hodasemi <superschneider@t-online.de>"]
edition = "2018"

[dependencies]
utilities = { path = "../utilities" }
vulkan-rs = { path = "../vulkan-rs" }
openxr = { version = "0.10.0", default-features = false, features = ["static"], optional = true }
openvr = { version = "0.6.0", optional = true }
sdl2 = { version = "0.34", default-features = false, features = ["bundled", "static-link"] }

[features]
OpenXR = ["openxr"]
OpenVR = ["openvr"]
